[gd_scene load_steps=5 format=2]

[ext_resource path="res://systems/Engine.gd" type="Script" id=1]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/BulletTest.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/BulletTest.gd" type="Script" id=4]

[node name="Engine" type="Node"]
script = ExtResource( 1 )

[node name="EntityLayer" type="Node" parent="."]

[node name="PlayerLayer" type="Node" parent="."]

[node name="Player" parent="PlayerLayer" instance=ExtResource( 2 )]
speed = 300.0

[node name="EffectLayer" type="Node" parent="."]

[node name="BulletLayer" type="Node" parent="."]

[node name="Sprite" parent="BulletLayer" instance=ExtResource( 3 )]
script = ExtResource( 4 )
